--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,8 @@
                     <argLine>
                         --illegal-access=permit
                     </argLine>
+                    <!--<groups>model</groups>-->
+                    <!--<excludedGroups>controllers</excludedGroups>-->
                 </configuration>
             </plugin>
             <plugin>
